NetBSD Problem Report #56596

From www@netbsd.org  Sat Jan  1 11:29:39 2022
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 2833B1A923C
	for <gnats-bugs@gnats.NetBSD.org>; Sat,  1 Jan 2022 11:29:39 +0000 (UTC)
Message-Id: <20220101112937.B80261A923D@mollari.NetBSD.org>
Date: Sat,  1 Jan 2022 11:29:37 +0000 (UTC)
From: bsiegert@gmail.com
Reply-To: bsiegert@gmail.com
To: gnats-bugs@NetBSD.org
Subject: Pinebook Pro graphics noticeably slower since DRM update
X-Send-Pr-Version: www-1.0

>Number:         56596
>Category:       port-arm
>Synopsis:       Pinebook Pro graphics noticeably slower since DRM update
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Jan 01 11:30:00 +0000 2022
>Closed-Date:    Sun Oct 30 23:48:42 +0000 2022
>Last-Modified:  Sun Oct 30 23:48:42 +0000 2022
>Originator:     Benny Siegert
>Release:        NetBSD current with 9.2 userland
>Organization:
The NetBSD Foundation
>Environment:
NetBSD meguro.bentsukun.ch 9.99.92 NetBSD 9.99.92 (PBP64) #5: Sat Nov 13 16:06:47 UTC 2021  bsiegert@meguro.bentsukun.ch:/usr/obj/sys/arch/evbarm/compile/PBP64 evbarm

@(#)NetBSD 9.99.92 (PBP64) #1: Mon Dec 20 08:32:05 UTC 2021

>Description:
I updated the NetBSD-current kernel on the Pinebook Pro on December 20,
after the big merge of the new DRM code.

I noticed that the graphics are *much* slower compared to a pre-DRM merge
kernel (November 15). In particular, in a full-screen Firefox window, you
can watch the screen redraw inside the browser window, taking about a
second. In comparison, in the older kernel, this is nearly instantaneous.

I noticed that there is occasionally a kernel message about atomic modeset userland being broken (?), which leads to disabling of atomic. I assume this is related?

>How-To-Repeat:
Run Firefox on a Pinebook Pro with recent -current kernel.
>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->feedback
State-Changed-By: maya@NetBSD.org
State-Changed-When: Sat, 21 May 2022 17:49:35 +0000
State-Changed-Why:
I seem to recall that broken vblank support was the cause of major slowness and was added after your bug.
Are you still having significant performance issues?


State-Changed-From-To: feedback->open
State-Changed-By: bsiegert@NetBSD.org
State-Changed-When: Sun, 22 May 2022 10:59:25 +0000
State-Changed-Why:
feedback privovided


From: Benny Siegert <bsiegert@gmail.com>
To: gnats-bugs@netbsd.org
Cc: maya@netbsd.org
Subject: Re: port-arm/56596 (Pinebook Pro graphics noticeably slower since
 DRM update)
Date: Sun, 22 May 2022 10:58:47 +0000 (UTC)

 On Sat, 21 May 2022, maya@netbsd.org wrote:

 > I seem to recall that broken vblank support was the cause of major slowness and was added after your bug.
 > Are you still having significant performance issues?

 Yes. Just tried with -current from yesterday.

 I also still see this kernel message, which is not present in the older 
 kernel I use otherwise.

    broken atomic modeset userspace detected, disabling atomic

 It appears only once, when X is started initially. Is this because I have 
 a userland from NetBSD-9? Should I be using a -current userland (including 
 X) with a -current kernel?

 -- 
 Benny

From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@netbsd.org
Cc: port-arm-maintainer@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: port-arm/56596: Pinebook Pro graphics noticeably slower since DRM update
Date: Sun, 30 Oct 2022 07:14:28 +1100

 i thought this problem was resolved by the vblank fixes, but while
 it works OK for me, firefox is slow to redraw and mpv drops the
 vast majority of a 720p video, where-as it used to work OK.

 so while the vblank fixes *did* help a lot, there is still a large
 regression in performance.


 .mrg.

From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56596 CVS commit: src/sys/arch/arm/rockchip
Date: Sun, 30 Oct 2022 23:10:43 +0000

 Module Name:	src
 Committed By:	jmcneill
 Date:		Sun Oct 30 23:10:43 UTC 2022

 Modified Files:
 	src/sys/arch/arm/rockchip: rk_drm.c

 Log Message:
 Remove dirty fb IOCTL callback introduced in latest drm update.

 Not sure how this got here, but the rkdrm driver does not need to do
 damage tracking as it uses Normal-NC (uncached) mappings.

 PR# port-arm/56596


 To generate a diff of this commit:
 cvs rdiff -u -r1.20 -r1.21 src/sys/arch/arm/rockchip/rk_drm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Sun, 30 Oct 2022 23:48:42 +0000
State-Changed-Why:
Fixed in sys/arch/arm/rockchip/rk_drm.c r1.21


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2022 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.